--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-# docker-compose.yml
 version: '3.8'
 services:
   app:
@@ -13,6 +12,13 @@ services:
       - .:/var/www
     networks:
       - laravel
+    environment:
+      - DB_CONNECTION=mysql
+      - DB_HOST=db
+      - DB_PORT=3306
+      - DB_DATABASE=your_database_name
+      - DB_USERNAME=your_database_user
+      - DB_PASSWORD=your_database_password
 
   webserver:
     image: arm64v8/nginx:alpine
@@ -31,14 +37,19 @@ services:
     container_name: db
     restart: unless-stopped
     environment:
-      MYSQL_DATABASE: laravel
-      MYSQL_ROOT_PASSWORD: secret
-      SERVICE_TAGS: dev
-      SERVICE_NAME: mariadb
+      - MYSQL_ROOT_PASSWORD=root_password
+      - MYSQL_DATABASE=your_database_name
+      - MYSQL_USER=your_database_user
+      - MYSQL_PASSWORD=your_database_password
+    volumes:
+      - dbdata:/var/lib/mysql
     ports:
       - "3306:3306"
     networks:
       - laravel
+
+volumes:
+  dbdata:
 
 networks:
   laravel:
